@@ -2,6 +2,10 @@ Revision history for Date-Easy
 
 {{$NEXT}}
 
+    [New Features]
+    * New `split` method
+      splits to (Y, m, d) for date, (Y, m, d, H, M, S) for datetime
+
 0.03      2017-02-21 19:45:46-08:00 America/Los_Angeles
 
     [New Features]
